--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@coreui/vue-chartjs": "^3.0.0",
     "@popperjs/core": "^2.11.8",
     "chart.js": "^4.5.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "pinia": "^3.0.3",
     "simplebar-vue": "^2.4.2",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
